--- a/templates/document_types.html
+++ b/templates/document_types.html
@@ -427,11 +427,11 @@ function showDeleteConfirmation(id) {
 }
 
 function showModal(modalId) {
-    document.getElementById(modalId).style.display = 'block';
+    document.getElementById(modalId).classList.add('show');
 }
 
 function hideModal(modalId) {
-    document.getElementById(modalId).style.display = 'none';
+    document.getElementById(modalId).classList.remove('show');
 }
 
 function showAddDocumentTypeModal() {
