--- a/templates/users.html
+++ b/templates/users.html
@@ -131,7 +131,7 @@
             </div>
             <div class="action-buttons">
                 <button type="button" class="action-btn primary" onclick="toggleSelectedDocumentsStatus()">
-                    <i data-feather="refresh-cw"></i> Toggle Status
+                    <i data-feather="refresh-cw"></i> Update
                 </button>
                 <button type="button" class="action-btn" onclick="hideModal('userDocumentsModal')">Close</button>
             </div>
